[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/controls.gd" type="Script" id=1]
[ext_resource path="res://fonts/Header1.res" type="DynamicFont" id=2]
[ext_resource path="res://menus/main.theme" type="Theme" id=3]
[ext_resource path="res://fonts/Body.res" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0.168627, 0, 1 )

[node name="Controls" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 568.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox"]
margin_right = 1216.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Controls"

[node name="PlayerPicker" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 56.0
margin_right = 1216.0
margin_bottom = 88.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Margin/VBox/PlayerPicker"]
margin_left = 522.0
margin_top = 4.0
margin_right = 579.0
margin_bottom = 27.0
size_flags_horizontal = 10
text = "Player"
align = 1

[node name="Option" type="OptionButton" parent="Margin/VBox/PlayerPicker"]
margin_left = 587.0
margin_right = 651.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 2
text = "1"
align = 1
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null ]
selected = 0

[node name="Dummy" type="Control" parent="Margin/VBox/PlayerPicker"]
margin_left = 1174.0
margin_right = 1216.0
margin_bottom = 32.0
rect_min_size = Vector2( 42, 0 )

[node name="Settings" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 104.0
margin_right = 1216.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="DevicePicker" type="VBoxContainer" parent="Margin/VBox/Settings"]
margin_right = 856.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Controller" type="Button" parent="Margin/VBox/Settings/DevicePicker"]
margin_right = 856.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Controller"

[node name="Mouse" type="Button" parent="Margin/VBox/Settings/DevicePicker"]
margin_top = 200.0
margin_right = 856.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Mouse"

[node name="Sensitivity" type="Panel" parent="Margin/VBox/Settings"]
margin_left = 872.0
margin_right = 1000.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Margin/VBox/Settings/Sensitivity"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin/VBox/Settings/Sensitivity/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 368.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Settings/Sensitivity/MarginContainer/VBoxContainer2"]
margin_right = 96.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Sensitivity"
align = 1

[node name="VSlider" type="VSlider" parent="Margin/VBox/Settings/Sensitivity/MarginContainer/VBoxContainer2"]
margin_left = 40.0
margin_top = 39.0
margin_right = 56.0
margin_bottom = 313.0
size_flags_horizontal = 6
size_flags_vertical = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.3

[node name="Indicator" type="Label" parent="Margin/VBox/Settings/Sensitivity/MarginContainer/VBoxContainer2"]
margin_top = 329.0
margin_right = 96.0
margin_bottom = 352.0
size_flags_horizontal = 5
text = "08"
align = 1

[node name="Affirming" type="Panel" parent="Margin/VBox/Settings"]
margin_left = 1016.0
margin_right = 1216.0
margin_bottom = 384.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="Margin/VBox/Settings/Affirming"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "player 1: keyboard
player 1: keyboard
player 1: keyboard
player 1: keyboard"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Margin/VBox/Settings"]
visible = false
margin_left = 1212.0
margin_right = 1216.0
margin_bottom = 396.0

[node name="FOV" type="Panel" parent="Margin/VBox/Settings"]
visible = false
margin_left = 997.0
margin_right = 1095.0
margin_bottom = 396.0
rect_min_size = Vector2( 98, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Margin/VBox/Settings/FOV"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 16
custom_constants/margin_left = 8
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin/VBox/Settings/FOV/MarginContainer"]
margin_left = 8.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 380.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Settings/FOV/MarginContainer/VBoxContainer2"]
margin_right = 82.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Field of View"
align = 1

[node name="VSlider" type="VSlider" parent="Margin/VBox/Settings/FOV/MarginContainer/VBoxContainer2"]
margin_left = 33.0
margin_top = 30.0
margin_right = 49.0
margin_bottom = 334.0
size_flags_horizontal = 6
size_flags_vertical = 3
min_value = 45.0
value = 90.0

[node name="Indicator" type="Label" parent="Margin/VBox/Settings/FOV/MarginContainer/VBoxContainer2"]
margin_top = 350.0
margin_right = 82.0
margin_bottom = 364.0
size_flags_horizontal = 5
text = "90"
align = 1

[node name="Camera" type="VBoxContainer" parent="Margin/VBox/Settings"]
visible = false
margin_left = 1111.0
margin_right = 1216.0
margin_bottom = 396.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Margin/VBox/Settings/Camera"]
margin_right = 105.0
margin_bottom = 14.0
text = "Camera Type"
align = 1

[node name="OptionButton" type="OptionButton" parent="Margin/VBox/Settings/Camera"]
margin_top = 30.0
margin_right = 105.0
margin_bottom = 50.0
text = "First Person"
items = [ "First Person", null, false, 0, null, "Third Person", null, false, 1, null ]
selected = 0

[node name="Back" type="Button" parent="Margin/VBox"]
margin_top = 504.0
margin_right = 143.0
margin_bottom = 536.0
rect_min_size = Vector2( 143, 32 )
size_flags_horizontal = 0
text = "Back"
[connection signal="value_changed" from="Margin/VBox/Settings/Sensitivity/MarginContainer/VBoxContainer2/VSlider" to="." method="_on_VSlider_value_changed"]
